Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 3.3.0
-
ghx-label-3
Description
uery_test/test_kudu.py:242: in test_kudu_col_not_null_changed assert len(cursor.fetchall()) == 100 E assert 61 == 100 E + where 61 = len([(0, None), (2, None), (4, None), (11, None), (12, None), (19, None), ...]) E + where [(0, None), (2, None), (4, None), (11, None), (12, None), (19, None), ...] = <bound method HiveServer2Cursor.fetchall of <impala.hiveserver2.HiveServer2Cursor object at 0x7fe82c051550>>() E + where <bound method HiveServer2Cursor.fetchall of <impala.hiveserver2.HiveServer2Cursor object at 0x7fe82c051550>> = <impala.hiveserver2.HiveServer2Cursor object at 0x7fe82c051550>.fetchall
I believe this is a flaky tests, since there's no attempt to pass the timestamp from the kudu client that did the insert to the impala client that's doing the reading.